; ModuleID = '/home/carl/AnghaBench/openssl/crypto/async/extr_async.c_ASYNC_get_current_job.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/async/extr_async.c_ASYNC_get_current_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@OPENSSL_INIT_ASYNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ASYNC_get_current_job() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = load i32, i32* @OPENSSL_INIT_ASYNC, align 4
  %4 = call i32 @OPENSSL_init_crypto(i32 %3, i32* null)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %16

7:                                                ; preds = %0
  %8 = call %struct.TYPE_3__* (...) @async_get_ctx()
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %2, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = icmp eq %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i32* null, i32** %1, align 8
  br label %16

12:                                               ; preds = %7
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %1, align 8
  br label %16

16:                                               ; preds = %12, %11, %6
  %17 = load i32*, i32** %1, align 8
  ret i32* %17
}

declare dso_local i32 @OPENSSL_init_crypto(i32, i32*) #1

declare dso_local %struct.TYPE_3__* @async_get_ctx(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
